# mnist

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: common.h  data.h  data_handler.h  kmeans.h  knn.h
src/: CMakeLists.txt  common.cpp  data.cpp  data_handler.cpp  kmeans.cpp  knn.cpp
tests/: CMakeLists.txt  data_handler_test.cpp  kmeas_test.cpp  knn_test.cpp
